# frtl_2024

./: README.md  dependencies.repos
frtl_2023_cv_utils/: CMakeLists.txt  package.xml
frtl_2023_cv_utils/include/cv_utils/: ColorBoxFilter.hpp  ContourExtractor.hpp  EllipseFitResult.hpp  EllipseFitter.hpp  ImageToWorldConverter.hpp  ImgToWorld.hpp  PointCloudTracker.hpp  PolyIdResult.hpp  PolygonIdentifier.hpp  common.hpp  qrcode_reader.hpp  videoTest.hpp
frtl_2023_cv_utils/src/: ColorBoxFilter.cpp  ContourExtractor.cpp  EllipseFitter.cpp  ImageToWorldConverter.cpp  ImgToWorld.cpp  PointCloudTracker.cpp  PolygonIdentifier.cpp  qrcode_reader.cpp
frtl_2023_demo/: CMakeLists.txt  package.xml
frtl_2023_demo/include/demo/: land_state.hpp  takeoff_state.hpp
frtl_2023_demo/src/examples/: takeoff_and_land.cpp
frtl_2023_drone/: CMakeLists.txt  package.xml
frtl_2023_drone/include/drone/: Drone.hpp
frtl_2023_drone/src/: Drone.cpp
frtl_2023_fase1/: CMakeLists.txt  package.xml
frtl_2023_fase1/include/fase1/: finding_bases_state.hpp  initial_takeoff_state.hpp  landing_state.hpp  return_home_state.hpp  takeoff_state.hpp  visit_base_state.hpp
frtl_2023_fase1/include/fase1_safe/: base.hpp  landing_state.hpp  takeoff_state.hpp  visit_base_state.hpp
frtl_2023_fase1/src/: fase1.cpp  fase1_safe.cpp
frtl_2023_fase2/: CMakeLists.txt  package.xml
frtl_2023_fase2/include/fase2_safe/: read_qrcode_state.hpp  return_home_state.hpp  takeoff_state.hpp  visit_base_state.hpp
frtl_2023_fase2/src/: fase2_safe.cpp
frtl_2023_fase3/: CMakeLists.txt  package.xml
frtl_2023_fase3/include/: drone.hpp  go_to_first_shelf_state.hpp  go_to_next_shelf_state.hpp  go_to_stand_state.hpp  read_shelf_state.hpp
frtl_2023_fase3/src/: drone.cpp
frtl_2023_fase4/: CMakeLists.txt  package.xml
frtl_2023_fase4/src/: drone.cpp
frtl_2024_cv_utils/: CMakeLists.txt  README.md  package.xml  setup.py
frtl_2024_cv_utils/launch/: yolo_classifier.launch.py
frtl_2024_cv_utils/msg/: BoundingBox.msg
frtl_2024_cv_utils/python_modules/: yolo_classifier.py
frtl_2024_cv_utils/qrcode_detector/: qrcode_detector.py
frtl_2024_cv_utils/yolo_classifier/: yolo_classifier.py
frtl_2024_demo/: CMakeLists.txt  package.xml
frtl_2024_demo/include/demo/: circle_state.hpp  land_state.hpp  takeoff_state.hpp
frtl_2024_demo/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
frtl_2024_demo/install/frtl_2024_demo/lib/frtl_2024_demo/: circle  takeoff_and_land
frtl_2024_demo/install/frtl_2024_demo/share/ament_index/resource_index/parent_prefix_path/: frtl_2024_demo
frtl_2024_demo/install/frtl_2024_demo/share/frtl_2024_demo/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
frtl_2024_demo/install/frtl_2024_demo/share/frtl_2024_demo/cmake/: frtl_2024_demoConfig.cmake
frtl_2024_demo/log/: latest_build
frtl_2024_demo/src/examples/: circle.cpp  takeoff_and_land.cpp
frtl_2024_drone/: CMakeLists.txt  package.xml
frtl_2024_drone/include/drone/: Drone.hpp
frtl_2024_drone/src/: Drone.cpp
frtl_2024_fase1/: CMakeLists.txt  package.xml
frtl_2024_fase1/include/: initial_takeoff_state.hpp  search_bases_state.hpp  visit_bases_state.hpp
frtl_2024_fase1/include/fase1/: CoordinateTransforms.hpp  GetNextPoint.hpp  PidController.hpp  camera_parameters.hpp  get_next_point.hpp  initial_takeoff_state.hpp  landing_state.hpp  return_home_state.hpp  search_bases_state.hpp  takeoff_state.hpp  visit_bases_state.hpp
frtl_2024_fase1/include/fase1_dummy/: initial_takeoff_state.hpp  landing_state.hpp  search_bases_state.hpp  visit_bases_state.hpp
frtl_2024_fase1/src/: CoordinateTransforms.cpp  fase1.cpp  fase1_dummy.cpp
frtl_2024_fase2/: CMakeLists.txt  package.xml
frtl_2024_fase2/include/fase2/: ArenaGrid.hpp  initial_takeoff_state.hpp  landing_state.hpp  return_home_state.hpp  search_bases_state.hpp  visit_bases_state.hpp
frtl_2024_fase2/src/: fase2.cpp
frtl_2024_fase3/: CMakeLists.txt  package.xml
frtl_2024_fase3/include/fase3/: Base.hpp  centralize_base_state.hpp  go_to_base_state.hpp  initial_takeoff_state.hpp  read_state.hpp  return_home_state.hpp  teste.py  teste2.py
frtl_2024_fase3/src/: fase3.cpp  fase3_middle.cpp
frtl_2024_fase4/: CMakeLists.txt  package.xml
frtl_2024_fase4/include/: gesture_control_state.hpp  initial_takeoff_state.hpp  landing_state.hpp  pid_controller.hpp  return_home_state.hpp  search_state.hpp  takeoff_state.hpp
frtl_2024_fase4/launch/: launch.py
frtl_2024_fase4/src/: fase4.cpp
