<?xml version="1.0"?>
<package format="3">
  <name>frtl_2024_cv_utils</name>
  <version>0.1.0</version>
  <description>Computer vision functions and ROS 2 Nodes for FRTL 2024</description>

  <!-- Maintainer and license information -->
  <maintainer email="viniceconp@gmail.com">Vinicius Ceccon</maintainer>
  <license>TODO: License declaration</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Package dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>ultralytics</depend>
  <depend>opencv</depend> <!-- OpenCV for image processing -->
  <depend>vision_msgs</depend> <!-- for object detection topics -->

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Exporting build type -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
